renamed About to Impressum

--- a/app/views/page/impressum.html.erb
+++ b/app/views/page/impressum.html.erb
@@ -1,6 +1,6 @@
 <section class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">About</h1>
+    <h1 class="display-3">Impressum</h1>
     <p class="lead">A demo website for booking and managing laboratory equipment.</p>
   </div>
 </section>
