--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -10,7 +10,7 @@
           <%= link_to "Home", root_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-          <%= link_to "About", about_path, class: 'nav-link' %>
+          <%= link_to "Impressum", impressum_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
           <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
