--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= location %>">
   <div><%= link_to "Home", root_path %></div>
-  <div><%= link_to "About", about_path %></div>
+  <div><%= link_to "Impressum", impressum_path %></div>
   <div><%= link_to "Equipment", equipment_index_path %></div>
   <div><%= link_to "Projects", projects_path %></div>
 </div>
