specified are you sure notices

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -44,7 +44,7 @@
                     booking,
                     method: :delete,
                     class: 'btn btn-danger btn-block',
-                    data: { confirm: 'Are you sure?' },
+                    data: { confirm: 'Are you sure you want to delete this booking?' },
                     remote: true unless @booking.new_record? %>
       </div>
     </div>
