--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -89,7 +89,7 @@
           <hr>
 
           <h3>Cancel my account</h3>
-          <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger"   %></p>
+          <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure you want to delete this account?" }, method: :delete, class: "btn btn-danger"   %></p>
 
           <div class="auth-links">
             <%= link_to "Back", :back %>
