--- a/app/views/equipment/_labor_item.html.erb
+++ b/app/views/equipment/_labor_item.html.erb
@@ -30,7 +30,7 @@
     <div class="card-body">
       <% if logged_in?(:admin) %>
         <%= link_to "Edit", edit_equipment_path(labor_item), class:"btn btn-primary" %>
-        <%= link_to "Delete", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+        <%= link_to "Delete", equipment_path(labor_item), method: :delete, data: { confirm: 'Are you sure you want to delete this equipment?' }, class:"btn btn-danger" %>
       <% else %>
         <%= form_for @booking_item, remote: true do |f| %>
           <% if labor_item.available_quantity(params[:pickup_date], params[:return_date]) == 0 %>
