--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -25,7 +25,7 @@
     <div class="card-body">
 
       <%= link_to 'Edit',edit_project_path(project), class: "btn btn-primary" %>
-      <%= link_to "Delete", project_path(project), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+      <%= link_to "Delete", project_path(project), method: :delete, data: { confirm: 'Are you sure you want to delete this project?' }, class:"btn btn-danger" %>
     </div>
   <% end %>
   </div>
