--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -44,7 +44,7 @@
                     user,
                     method: :delete,
                     class: 'btn btn-danger btn-block',
-                    data: { confirm: 'Are you sure?' },
+                    data: { confirm: 'Are you sure you want to delete this user?' },
                     remote: true unless @user.new_record? %>
       </div>
     </div>
