--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container ml-content pt-4">
+  <h3>All Projects</h3>
   <%= link_to "Add New Project",  new_project_path, class: "btn btn-primary" if logged_in?(:admin)  %>
   <div class="row padding-top">
     <%= render @projects %>
