--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -8,7 +8,7 @@
             <div class="col-md-6">
                 <h3 class="card-title">Booking Details </h3>
                 <p>Booking ID: <%= @booking.id.to_s %></p>
-                <p>Booking Status: <%= BookingStatus.find(@booking.booking_status) %></p>
+                <p>Booking Status: <%= BookingStatus.find(@booking.booking_status_id) %></p>
                 <p>Created At: <%= @booking.created_at %></p>
                 <p>Pickup Date: <%= @booking.pickup_date %></p>
                 <p>Return Date: <%= @booking.return_date %></p>
